# transcript-tool

./: .env  .gitignore  AGENT.md  Makefile  README.md  multichannel-transcription.md  prompt.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: bump_version.py
src/transcript_cli/: __init__.py  __main__.py  cli.py  core.py  version.py
tests/: test_cli.py  test_core.py
